samba (3.0.25a-2) UNRELEASED; urgency=low

  [ Debconf translations ]
  * Danish updated. Closes: #426773

 -- Christian Perrier <bubulle@debian.org>  Wed, 30 May 2007 23:21:07 +0200

samba (3.0.25a-1) unstable; urgency=low

  [ Christian Perrier ]
  * New upstream version
  * Bugs fixed upstream:
    - password expiration loog on samba domain controllers. Closes: #425083
    - no more login on samba servers that are members of samba domains
      Closes: #425680, #426002
    - users no longer have access according to their secondary groups
      on shares with "force group". Closes: #424629
  * Debian packaging fixes:
    - Enforce building with "--with-ads" and therefore fail
      when the build can't be done with kerberos support.
      Closes: #424637
    - debian/control: wrap long lines in packages' descriptions
    - uncomment out use of type-handling in the clean target, because
      type-handling has been fixed to support the new /usr/share/dpkg/ostable
    - avoid installing extra COPYING files in /usr/share/doc/* (one was
      installed along with the pcap2nbench example)
  * Merge Ubuntu changes:
    - use of PIDDIR instead of hardcoding it in samba.init and winbind.init
  * Patches to upstream source:
    - patches/fhs.patch: recreate winbindd_cache.tdb in the cache directory
      instead of the lock directory. Thanks to C. K. Jester-Young for the
      patch. Closes: #425640

  [ Steve Langasek ]
  * swat and samba depend on update-inetd instead of on netbase; swat also
    depends on "openbsd-inetd | inet-superserver", for samba this is only a
    Suggests.

 -- Christian Perrier <bubulle@debian.org>  Sun, 27 May 2007 09:30:02 +0200

samba (3.0.25-1) unstable; urgency=high

  * New upstream version including security fixes
  * Bugs fixed upstream:
    - nmbd no longer segfaults on bad interface line
      Closes: #265577, #386922, #359155, #366800
    - documentation issues about displaycharset. Closes: #350790